trying to do better clusters with more options, having some trouble with passing these args to the script